gcc/testsuite/gcc.dg/cpp/error-1.c
/* Test that error messages include "error:" in the text.  */
/* Origin: Joseph Myers <jsm@polyomino.org.uk> */
/* { dg-do preprocess } */
/* { dg-require-effective-target gcc_frontend } */

/* { dg-error "unterminated comment" }
